Fix clickability of web notifications.

The fix is in GetAllIdsByProfile. This patch also removes
GetAllIdsByProfileAndSourceOrigin() which is similarly broken, but
currently unused.

Bug: 767868
Change-Id: I75c3d286b1a982b6938ed6cd6ca54bbbd1a4a76e
Reviewed-on: https://chromium-review.googlesource.com/709997
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507828}
Former-commit-id: 26222fc987eee4c9ccdf8eecb4398fa401ac1e6b